# rust-simple-release

./: .gitignore  Cargo.toml  README.md  action.yml  main.py
.github/workflows/: action-test.yml
basic_test/: Cargo.toml
basic_test/src/: main.rs  main2.rs
docs/: README.zh-CN.md
lib_test/: Cargo.toml
openssl_test/: Cargo.toml
openssl_test/src/: main.rs
