[package]
name = "openssl-test"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
# the "vendored" is needed for cross compilation

[[bin]]
name = "openssl"
path = "src/main.rs"

[[bin]]
name = "openssl2"
path = "src/main2.rs"
